# ecommerce-portfolio

./: README.md  vercel.json
case-1-ecommerce/: PRD.md  README.md  index.html  package.json  telegram-app.html  vercel.json
case-1-ecommerce/api/: chat.js
case-1-ecommerce/css/: animations.css  layout-fix.css  modal.css  style.css  telegram-app.css
case-1-ecommerce/data/: chat.json
case-1-ecommerce/js/: charts.js  data.js  main.js  telegram-app.js
case-2-education/: .gitignore  AGENTS.md  ARCHITECTURE.md  DATABASE.md  PRD.md  README.md
case-2-education/backend/: .env.example  pyproject.toml
case-2-education/backend/app/: config.py
case-2-education/backend/app/db/: __init__.py  seed.py  session.py
case-2-education/backend/app/db/migrations/: env.py
case-2-education/backend/app/db/migrations/versions/: 001_initial.py
case-2-education/backend/app/models/: __init__.py  chat.py  course.py  homework.py  metrics.py  notification.py  student.py  user.py
telegram-bot/: README.md  bot.py  config.py  requirements.txt
